<resources>
    <string name="app_name">SplitTheBill</string>
    <string name="split_the_bill_button_text">Rachar</string>
    <string name="add_member_option_title">Adicionar membro</string>
    <string name="price_format">R$%1$s</string>
    <string name="member_name_field_text">Nome do membro do grupo</string>
    <string name="add_member_button_text">Adicionar</string>
    <string name="add_expense_icon">Adicionar despesa</string>
    <string name="back_button">Voltar</string>
    <string name="expenses_text">Despesas</string>
    <string name="edit_member_button">Editar</string>
    <string name="expense_description_field_hint">Descrição do gasto (Opcional)</string>
    <string name="expense_price_field_hint">Valor do gasto (Opcional)</string>
    <string name="add_expense_button">Adicionar despesa</string>
    <string name="expense_dialog_title">Adicionar despesa</string>
    <string name="split_the_bill_error_toast">São necessários membros no grupo para rachar a conta!</string>
    <string name="deviation_format">%1$sR$%2$s</string>
    <string name="remove_member_title">Remover membro</string>
    <string name="total_to_receive">Total a receber:</string>
</resources>