<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/expenseDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/expense_dialog_title"
        android:textSize="16sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/expenseDescriptionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:inputType="text"
        android:hint="@string/expense_description_field_hint"
        android:autofillHints=""

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseDialogTitle"/>

    <EditText
        android:id="@+id/expensePriceField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:inputType="numberDecimal"
        android:hint="@string/expense_price_field_hint"
        android:autofillHints=""

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseDescriptionField"/>

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense_button"

        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expensePriceField"/>

</androidx.constraintlayout.widget.ConstraintLayout>